Made menu button smaller. Fixes #2

--- a/static/css/sass.scss
+++ b/static/css/sass.scss
@@ -65,8 +65,8 @@ header {
     }
 
     img {
-      width: 3em;
-      height: 3em;
+      width: 2em;
+      height: 2em;
       &:hover {
         cursor: pointer;
       }
@@ -103,8 +103,8 @@ header {
         }
 
         img {
-          width: 2.4em;
-          height: 2.4em;
+          width: 2em;
+          height: 2em;
         }
 
         a {
